fixed the overflowing on the y-axis

--- a/src/Components/Countdown/countdown.css
+++ b/src/Components/Countdown/countdown.css
@@ -1,3 +1,8 @@
 .countdown {
     background-color: var(--black);
+    color: var(--white);
+
+    span {
+        color: var(--blue);
+    }
 }
