--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,11 +6,17 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.div-wrapper {
+  width: 100vw;
+  overflow: hidden;
 }
 
 
