--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -2,4 +2,5 @@
     --black: #150E10;
     --white: #E5E3E1;
     --black-hover: #524B4D;
+    --blue: #4AA4DD;
 }
